[package]
name = "flutter_tools"
version = "0.1.0"
authors = ["jonahwilliams <jonahwilliams@google.com>"]
edition = "2018"

[dependencies]
getopts = "0.2"
futures = "0.1"
serde_json = "1.0"
serde = "1.0"
serde_derive = "1.0"
websocket = "0.22.2"
url = "1.7.2"
log = "0.4.6"
http = "*"
base64 = "*"
reqwest = "*"
libflate = "*"
uuid = { version = "0.7", features = ["v4"] }